# ai-powered-cv-screener-repo

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  cvs.py  settings.py
backend/app/application/: chat_use_case.py  ingest_use_case.py
backend/app/core/: config.py  dependencies.py  exceptions.py
backend/app/domain/entities/: candidate.py  chat.py  chunk.py
backend/app/domain/ports/: embedding_port.py  llm_port.py  pdf_port.py  vector_store_port.py
backend/app/infrastructure/embeddings/: factory.py  ollama_embedding_adapter.py
backend/app/infrastructure/llm/: factory.py  gemini_adapter.py  ollama_adapter.py  openrouter_adapter.py
backend/app/infrastructure/pdf/: factory.py  pdfplumber_adapter.py
backend/app/infrastructure/vector_store/: chroma_adapter.py  factory.py
backend/app/services/: embeddings.py  llm.py  rag.py
backend/scripts/: check_providers.py  configure.py  generate_cvs.py  ingest_cvs.py  remove_cvs.py
backend/scripts/cv_data/: candidates.py  photo.py  profiles.py
docs/: architecture.md  cli-commands.md  diagram.md  hexagonal.md  providers.md
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: CVManagement.tsx  CandidateBrowser.tsx  ChatMessage.tsx  IngestBanner.tsx  SourceBadge.tsx  SuggestedQuestions.tsx  TypingIndicator.tsx
frontend/lib/: api.ts
frontend/types/: chat.ts
