[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
]

[project.scripts]
check-providers = "scripts.check_providers:main"
generate-cvs    = "scripts.generate_cvs:main"
remove-cvs      = "scripts.remove_cvs:main"
ingest-cvs      = "scripts.ingest_cvs:main"
configure       = "scripts.configure:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
